# MT5WT

./: .pre-commit-config.yaml  .travis.yaml  .travis.yml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
common/: common.py
doc/: TEST_CASES.md
fixture/: _base.py  application.py  login_page.py
locators/: LoginPage.py  login_page.py
tests/: test_first.py  test_login.py  test_menu.py
