[tool.poetry]
name = "WT_MT5"
version = "1.0"
description = ""
authors = ["mq_old_qa"]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141"
pytest = "^5.3"
webdrivermanager = "^0.7.4"
webdriver_manager = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
